--- a/base/skin/stylesheet.css
+++ b/base/skin/stylesheet.css
@@ -2,9 +2,11 @@
       body {
         margin: 0px;
         background-color: #404040;
-        background-image: url('{$SKIN_PATH}/background.png');
-        background-repeat: repeat;
+        background-image: radial-gradient(circle at 50% 85%, #dee6e8 0%, #c6ced1 80%, #b8cacc 100%),
+                          radial-gradient(ellipse at 50% 100%, #ecf2f0 0%, #ecf2f080 50%, #00000000 100%);
+        background-repeat: no-repeat;
         background-attachment: fixed;
+        background-position-x: center;
       }
 
       body, td, th {
@@ -59,7 +61,7 @@
       }
 
       h1, h2 {
-        border-bottom: 1px solid #d7d7d7;
+        border-bottom: 1px solid #d6e5f5;
       }
 
       h1:first-of-type {
@@ -69,7 +71,7 @@
       /* ========================================================================== */
 
       .binoc-dwm-surface {
-        background-color: #009249 !important;
+        background-color: #29456a !important;
       }
 
       /* ========================================================================== */
@@ -80,7 +82,7 @@
         max-width: 1200px;
         margin: 0 auto;
         margin-top: 32px;
-        border: 1px solid #24ffdb;
+        border: 1px solid #5e81a6;
         box-shadow: inset 0px 0px 1px #212424;
         box-shadow: 0px 0px 20px rgba(0,0,0,0.40);
         transition: all 0.2s linear;
@@ -113,9 +115,9 @@
 
       #binoc-client {
         background-color: #fcfcfc;
-        border-left: 1px solid #007039;
-        border-right: 1px solid #007039;
-        border-top: 1px solid #007039;
+        border-left: 1px solid #5e81a6;
+        border-right: 1px solid #5e81a6;
+        border-top: 1px solid #5e81a6;
         margin-top: 0px;
         margin-left: 2px;
         margin-right: 2px;
@@ -250,9 +252,9 @@
         font-size: 9pt;
         color: #000;
         font-family: "RedHatDisplay";
-        border-left: 1px solid #007039;
-        border-right: 1px solid #007039;
-        border-bottom: 1px solid #007039;
+        border-left: 1px solid #5e81a6;
+        border-right: 1px solid #5e81a6;
+        border-bottom: 1px solid #5e81a6;
         margin-top: 0px;
         margin-left: 2px;
         margin-right: 2px;
